--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test API</title>
-</head>
-<body>
-  <h1>How many dogs do you want?</h1>
-  <form action="#">
-    <label for="search-amount">Amount of Dogs</label>
-    <input type="number" id="search-amount" name="search-amount" min="1" max="50" value="3" required>
-    <button class="search-button">
-      <span>Search</span>
-      </span>
-    </button>
-  </form>
-  <main class="dog-pictures"></main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Test API</title>
+  </head>
+  <body>
+    <h1>How many dogs do you want?</h1>
+    <form action="#">
+      <label for="search-amount">Amount of Dogs</label>
+      <input
+        type="number"
+        id="search-amount"
+        name="search-amount"
+        min="1"
+        max="50"
+        value="3"
+      />
+      <button class="search-button">
+        Search
+      </button>
+    </form>
+    <main class="dog-pictures"></main>
+  </body>
 </html>
