--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,14 @@
     <title>Test API</title>
   </head>
   <body>
-    <h1>How many dogs do you want?</h1>
+    <h1>What kind of do you want?</h1>
     <form action="#">
-      <label for="search-amount">Amount of Dogs</label>
+      <label for="search-breed">Breed Selector</label>
       <input
-        type="number"
-        id="search-amount"
-        name="search-amount"
-        min="1"
-        max="50"
-        value="3"
+        type="text"
+        id="search-breed"
+        name="search-breed"
+        placeholder="Choose a breed..."
       />
       <button class="search-button">
         Search
